docs(k6): 전체 시나리오 개선 방향 섹션 추가 (s02·s07 상세, s01·s03·s04·s05·s06 플레이스홀더)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>